--- a/FrustumApp/MainWindow.xaml
+++ b/FrustumApp/MainWindow.xaml
@@ -1,65 +1,94 @@
 ﻿<Window x:Class="FrustumApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Усечённая пирамида" Height="600" Width="800">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+        Title="Усечённая пирамида" Height="700" Width="1000"
+        Loaded="Window_Loaded">
+    <DockPanel LastChildFill="True">
+        <!-- 1. Меню (фиксировано вверху) -->
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Файл">
+                <MenuItem Header="Сбросить" Click="Reset_Click"/>
+                <Separator/>
+                <MenuItem Header="Выход" Click="Exit_Click"/>
+            </MenuItem>
+            <MenuItem Header="Вид">
+                <MenuItem x:Name="menuFront" Header="Вид спереди" IsChecked="True" Click="MenuFront_Click"/>
+                <MenuItem x:Name="menuPerspective" Header="Перспектива" Click="MenuPerspective_Click"/>
+                <MenuItem x:Name="menuOblique" Header="Косоугольная" Click="MenuOblique_Click"/>
+            </MenuItem>
+        </Menu>
 
-        <StackPanel Grid.Column="0" Margin="10">
-            <!-- Параметры пирамиды -->
-            <GroupBox Header="Параметры">
-                <StackPanel>
-                    <TextBlock Text="Нижний радиус:" Margin="0,5"/>
-                    <Slider x:Name="sliderBottom" Minimum="0.1" Maximum="3" Value="1" TickFrequency="0.1"/>
+        <!-- 2. Строка состояния (фиксирована внизу) -->
+        <StatusBar DockPanel.Dock="Bottom" Height="22" Background="#FFF0F0F0">
+            <StatusBarItem>
+                <TextBlock x:Name="statusText" Text="Готово" Margin="5,0" VerticalAlignment="Center"/>
+            </StatusBarItem>
+        </StatusBar>
 
-                    <TextBlock Text="Верхний радиус:" Margin="0,5"/>
-                    <Slider x:Name="sliderTop" Minimum="0.1" Maximum="3" Value="0.5" TickFrequency="0.1"/>
+        <!-- 3. Основное содержимое (занимает всё оставшееся пространство) -->
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="180"/>
+                <ColumnDefinition Width="*" MinWidth="400"/>
+            </Grid.ColumnDefinitions>
 
-                    <TextBlock Text="Высота:" Margin="0,5"/>
-                    <Slider x:Name="sliderHeight" Minimum="0.1" Maximum="3" Value="1" TickFrequency="0.1"/>
+            <!-- Левая панель управления -->
+            <StackPanel Grid.Column="0" Margin="8">
+                <!-- Параметры пирамиды -->
+                <GroupBox Header="Параметры" Margin="0,5">
+                    <StackPanel>
+                        <TextBlock Text="Нижний радиус:" Margin="0,3"/>
+                        <Slider x:Name="sliderBottom" Minimum="0.1" Maximum="3" Value="1" TickFrequency="0.1"/>
 
-                    <TextBlock Text="Количество граней:" Margin="0,5"/>
-                    <Slider x:Name="sliderSides" Minimum="3" Maximum="12" Value="4" IsSnapToTickEnabled="True" TickFrequency="1"/>
-                </StackPanel>
-            </GroupBox>
+                        <TextBlock Text="Верхний радиус:" Margin="0,3"/>
+                        <Slider x:Name="sliderTop" Minimum="0.1" Maximum="3" Value="0.5" TickFrequency="0.1"/>
 
-            <!-- Трансформации -->
-            <GroupBox Header="Трансформации" Margin="0,10">
-                <StackPanel>
-                    <TextBlock Text="Перенос X:" Margin="0,5"/>
-                    <Slider x:Name="sliderTranslateX" Minimum="-5" Maximum="5" TickFrequency="0.5"/>
+                        <TextBlock Text="Высота:" Margin="0,3"/>
+                        <Slider x:Name="sliderHeight" Minimum="0.1" Maximum="3" Value="1" TickFrequency="0.1"/>
 
-                    <TextBlock Text="Поворот Y:" Margin="0,5"/>
-                    <Slider x:Name="sliderRotateY" Minimum="0" Maximum="360" TickFrequency="15"/>
-                </StackPanel>
-            </GroupBox>
+                        <TextBlock Text="Количество граней:" Margin="0,3"/>
+                        <Slider x:Name="sliderSides" Minimum="3" Maximum="12" Value="4" IsSnapToTickEnabled="True" TickFrequency="1"/>
+                    </StackPanel>
+                </GroupBox>
 
-            <!-- Проекции -->
-            <GroupBox Header="Проекции" Margin="0,10">
-                <StackPanel>
-                    <RadioButton x:Name="rbFront" Content="Вид спереди" IsChecked="True"/>
-                    <RadioButton x:Name="rbPerspective" Content="Перспективная"/>
-                    <RadioButton x:Name="rbOblique" Content="Косоугольная"/>
-                </StackPanel>
-            </GroupBox>
-        </StackPanel>
+                <!-- Трансформации -->
+                <GroupBox Header="Трансформации" Margin="0,10">
+                    <StackPanel>
+                        <TextBlock Text="Перенос X:" Margin="0,3"/>
+                        <Slider x:Name="sliderTranslateX" Minimum="-5" Maximum="5" Value="0" TickFrequency="0.5"/>
 
-        <!-- 3D Viewport -->
-        <Viewport3D x:Name="viewport" Grid.Column="1">
-            <Viewport3D.Camera>
-                <OrthographicCamera Position="0,0,5" LookDirection="0,0,-1" UpDirection="0,1,0" Width="5"/>
-            </Viewport3D.Camera>
+                        <TextBlock Text="Поворот Y:" Margin="0,3"/>
+                        <Slider x:Name="sliderRotateY" Minimum="0" Maximum="360" Value="0" TickFrequency="15"/>
+                    </StackPanel>
+                </GroupBox>
 
-            <ModelVisual3D>
-                <ModelVisual3D.Content>
-                    <DirectionalLight Color="White" Direction="-1,-1,-1"/>
-                </ModelVisual3D.Content>
-            </ModelVisual3D>
+                <!-- Проекции -->
+                <GroupBox Header="Проекции" Margin="0,10">
+                    <StackPanel>
+                        <RadioButton x:Name="rbFront" Content="Вид спереди" IsChecked="True" Margin="0,2"/>
+                        <RadioButton x:Name="rbPerspective" Content="Перспективная" Margin="0,2"/>
+                        <RadioButton x:Name="rbOblique" Content="Косоугольная" Margin="0,2"/>
+                    </StackPanel>
+                </GroupBox>
 
-            <ModelVisual3D x:Name="modelContainer"/>
-        </Viewport3D>
-    </Grid>
+                <!-- Кнопки управления -->
+                <Button Content="Сбросить все" Margin="0,15" Height="28" Click="Reset_Click"/>
+                <Button Content="Сохранить состояние" Margin="0,5" Height="25" Click="SaveState_Click"/>
+                <Button Content="Восстановить" Margin="0,5" Height="25" Click="RestoreState_Click"/>
+            </StackPanel>
+
+            <!-- Область 3D-вида (максимальный размер) -->
+            <Viewport3D x:Name="viewport" Grid.Column="1" Margin="0">
+                <ModelVisual3D>
+                    <ModelVisual3D.Content>
+                        <Model3DGroup>
+                            <DirectionalLight Color="White" Direction="-1,-1,-1"/>
+                            <AmbientLight Color="#333"/>
+                        </Model3DGroup>
+                    </ModelVisual3D.Content>
+                </ModelVisual3D>
+                <ModelVisual3D x:Name="modelContainer"/>
+            </Viewport3D>
+        </Grid>
+    </DockPanel>
 </Window>
